[package]
name = "shavee"
version = "0.7.0"
authors = ["Ashutosh Verma <shavee@ashu.io>"]
edition = "2018"
license = "MIT"
description = "shavee is a program to automatically decrypt and mount ZFS datasets using Yubikey HMAC as 2FA or any USB drive with support for PAM to auto mount home directories."
homepage = "https://shavee.ashu.io"
documentation = "https://shavee.ashu.io"
readme = "README.md"
repository = "https://github.com/ashuio/shavee"

[features]
default = ["file", "yubikey"] # select the features to be included in the binary
yubikey = []                  # Yubikey feature
file = []                     # File 2FA feature

[dependencies]
shavee_core = { path = "../shavee-core" }
sha2 = "0.10.8"
rpassword = "7.3.1"
base64 = "0.21.5"
atty = "0.2.14"
clap = { version = "4", features = ["cargo"] }

[dev-dependencies]
stdio-override = "0.1.3"
tempfile = "3.8.1"
nix = "0.26"
random-string = "1.0.1"
