[package]
name = "shavee"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true


[features]
default = ["file","yubikey"] # select the features to be included in the binary
yubikey = []                  # Yubikey feature
file = []                     # File 2FA feature

[dependencies]
shavee_core = { package = "shavee_core", path = "../shavee-core", version = "1.0.0"}
sha2 = "0.10.8"
rpassword = "7.3.1"
base64 = "0.21.5"
atty = "0.2.14"
clap = { version = "4", features = ["cargo", "env"] }
tokio = { version = "1.35.0", features = ["full"] }

[dev-dependencies]
stdio-override = "0.1.3"
tempfile = "3.8.1"
nix = "0.26"
random-string = "1.0.1"
