[package]
name = "shavee"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["yubikey", "zfs", "encryption"]
categories = ["security", "command-line-utilities"]


[features]
default = ["file","yubikey"] # select the features to be included in the binary
yubikey = []                  # Yubikey feature
file = []                     # File 2FA feature

[dependencies]
shavee_core = { package = "shavee_core", path = "../shavee-core", version = "1.0.1"}
rpassword = "7.3"
base64 = "0.21"
atty = "0.2"
clap = { version = "4", features = ["cargo", "env"] }
tokio = { version = "1.35", features = ["full"] }
yubico_manager = {path = "../../yubico-manager",package = "yubico_manager",version = "*"}

[dev-dependencies]
stdio-override = "0.1"
tempfile = "3.8"
nix = "0.26"
random-string = "1.0"
