[package]
name = "shavee_core"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true


[features]
# default = ["trace"]
trace = ["dep:env_logger", "dep:log"]
default = ["file","yubikey"] # select the features to be included in the binary
yubikey = []                  # Yubikey feature
file = []   

[dependencies]
yubico_manager = "0.9.0"
sha2 = "0.10.8"
curl = "0.4.44"
rust-argon2 = "2.0.0"
base64 = "0.21.5"
clap = { version = "4", features = ["cargo"] }
rand = "0.8.5"
log = { version = "0.4.20", optional = true }
env_logger = { version = "0.10.1", optional = true }
strum = "0.25.0"
strum_macros = "0.25.3"


[dev-dependencies]
tempfile = "3.4"
nix = "0.26.4"
random-string = "1.0.0"
