[package]
name = "shavee_core"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["yubikey", "zfs", "encryption"]
categories = ["security"]


[features]
# default = ["trace"]
trace = ["dep:env_logger", "dep:log"]
default = ["file","yubikey"] # select the features to be included in the binary
yubikey = []                  # Yubikey feature
file = []   

[dependencies]
challenge_response = "0.5"
curl = "0.4"
argon2 = "0.5"
base64 = "0.22"
clap = { version = "4", features = ["cargo"] }
rand = "0.9"
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
strum = "0.27"
strum_macros = "0.27"

[dev-dependencies]
tempfile = "3.4"
nix = { version = "0.27", features = ["user"] }
random-string = "1.0"
