[package]
name = "shavee_pam"
authors = ["Ashutosh Verma <shavee@ashu.io>"]
version = "0.5.2"
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "shavee_pam"

[features]
default = ["yubikey", "file"]
yubikey = []
file = []

[dependencies]
pamsm = { version="0.5.2", features=["libpam"] }
shavee_core = {path = "../shavee-core"}
clap = { version = "3", features = ["cargo"] }
base64 = "0.21.0"
