[package]
name = "shavee_pam"
authors = ["Ashutosh Verma <shavee@ashu.io>"]
version = "0.7.2"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "shavee_pam"

[features]
default = ["yubikey", "file"]
yubikey = []
file = []

[dependencies]
pamsm = { version = "0.5.3", features = ["libpam"] }
shavee_core = { path = "../shavee-core" }
