[package]
name = "shavee_pam"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib"]
name = "shavee_pam"

[features]
default = ["file","yubikey"]
yubikey = []
file = []

[dependencies]
pamsm = { version = "0.5.3", features = ["libpam"] }
shavee_core = { package = "shavee_core", path = "../shavee-core", version = "1.0.0"}
